<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <androidx.cardview.widget.CardView
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        card_view:cardCornerRadius="48dp">

        <ImageView
            android:id="@+id/ivMoviePoster"
            android:layout_width="232dp"
            android:layout_height="345dp"
            android:layout_gravity="center"
            android:cropToPadding="true"
            android:background="@drawable/loading"
            android:contentDescription="@string/movie_poster"
            android:clickable="true" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMovieTitle"
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:text="@string/value_not_found"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/textTitle" />

            <ToggleButton
                android:id="@+id/tbtFavorite"
                android:layout_width="24dp"
                android:layout_height="24dp"
                style="@style/toggleButton"
                android:background="@drawable/ic_heart_bg"
                android:checked="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivStar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/star"
                card_view:srcCompat="@drawable/ic_star_percent"/>

            <TextView
                android:id="@+id/tvVoteAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_not_found"
                android:textAppearance="@style/textDefault"
                android:alpha="0.7"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>