<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MovieDetailActivity">
    <!--    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--        xmlns:tools="http://schemas.android.com/tools"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:fillViewport="true"-->
    <!--        android:orientation="vertical"-->
    <!--        tools:context=".view.MovieDetailActivity">-->

    <!--        <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:background="@color/background">-->

    <ImageButton
        android:id="@+id/ibtBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back" />

    <!-- ALTERAR tamanho da img e arrumar scaleType-->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivMoviePoster"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/movie_poster"
        android:scaleType="centerCrop"
        android:src="@drawable/fight_club"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/shapeCornerBotton40" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout"
            style="@style/shapeCornerLeft100"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:background="@drawable/radius_left_100"
            android:backgroundTint="@color/background"
            android:padding="8dp">

            <ImageView
                android:id="@+id/ivStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/star"
                android:padding="8dp"
                android:src="@drawable/ic_star_percent"
                app:layout_constraintBottom_toBottomOf="@+id/tvMsgAvaliation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvPercent" />

            <TextView
                android:id="@+id/tvVoteAverage"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:text="@string/value_not_found"
                android:textAppearance="@style/textDefault"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivStar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvMsgAvaliation"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:text="@string/user_avaliation"
                android:textAppearance="@style/textDefault"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivStar"
                app:layout_constraintTop_toBottomOf="@+id/tvPercent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">
        <!-- ver ajuste para titulos maiores -->
        <TextView
            android:id="@+id/tvMovieDetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/value_not_found"
            android:textAppearance="@style/textTitle" />

        <ToggleButton
            android:id="@+id/tbtFavorite"
            style="@style/toggleButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_heart_bg"
            android:checked="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/tvReleaseYear"
            style="@style/textDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:padding="8dp"
            android:text="@string/value_not_found" />

        <TextView
            android:id="@+id/tvAge"
            style="@style/textDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/value_not_found" />

        <TextView
            android:id="@+id/tvRuntime"
            style="@style/textDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/value_not_found" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMovieGenres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />

    <TextView
        android:id="@+id/tvOverviewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/overview"
        android:textAppearance="@style/textTitle2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/rvMovieGenres" />

    <TextView
        android:id="@+id/tvOverviewText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:alpha="0.5"
        android:text="@string/value_not_found"
        android:textAppearance="@style/textDefault"
        app:layout_constraintStart_toStartOf="@+id/tvOverviewTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvOverviewTitle" />

    <TextView
        android:id="@+id/tvCastTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:text="@string/title_elenco"
        android:textAppearance="@style/textTitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvOverviewTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvOverviewText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintStart_toStartOf="@+id/tvCastTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvCastTitle" />

    <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>